--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <div class="content">
         <p>Watch out it's raining Takoyaki!</p>
     </div>
-    <script src="app.js"></script>
+    <script src="src/app.js"></script>
 </body>
 </html>
