--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>It's Raining!!</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
     <div class="rain-container" id="rainContainer"></div>
     <div class="content">
         <p>Watch out it's raining Takoyaki!</p>
     </div>
-    <script src="src/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
